nova_tests/negative_capability/errdefer_return_rejected.nv
// EXPECT_COMPILE_ERROR `return` is not allowed at the top level of `errdefer` body
//
// D90 Ф.3 (Вариант 3): top-level `return` в errdefer body запрещён —
// он hijack'нул бы scope-exit окружающей функции. Same constraints
// что и `defer`.

module negative_capability.errdefer_return_rejected


fn f() -> int {
    errdefer {
        return 42       // ❌ return в errdefer body
    }
    7
}
